--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 This is a simple set of tools for dungeon managers.
 The current project only targets AD&D 2nd edition rules.
 
+This branch always holds the last known stable build
+
 This is not an RPG game, it's some helper tools for people DM-ing real
 games and designed to not get in the way of role-play and story-telling
 but simply help to do the maths during encounters and levelling.
