--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ezdm (0.0.3) quantal; urgency=low
+
+  * master - Lintian is now happy
+
+ -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 12:29:54 +0200
+
 ezdm (0.0.2ubuntu1) quantal; urgency=low
 
   * master - Sudo only for the bits that need it
