--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 ezdm (0.0.3) quantal; urgency=low
 
+  * master - Proper package layout
   * master - Lintian is now happy
 
  -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 12:29:54 +0200
