--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+ezdm (0.0.5) quantal; urgency=low
+
+  * Non-maintainer upload.
+  * master - Added desktop icon
+
+ -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 21:54:41 +0200
+
+ezdm (0.0.4ubuntu1+nmu1) UNRELEASED; urgency=low
+
+  * Non-maintainer upload.
+  * 0.0.5
+
+ -- A.J. Venter <silentcoder@ravenriley>  Thu, 28 Feb 2013 21:53:39 +0200
+
 ezdm (0.0.4ubuntu1) quantal; urgency=low
 
   * master - Added debhelper tokens
