--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ezdm (0.0.6master2) quantal; urgency=low
+ezdm (0.0.6ubuntu1stable1) UNRELEASED; urgency=low
 
-  * stable - Update debchange helper script stable
+  * Still working on debchange.sh
 
- -- A.J. Venter <ajventer@gmail.com>  Sat, 02 Mar 2013 12:41:56 +0200
+ -- A.J. Venter <silentcoder@ravenriley>  Sat, 02 Mar 2013 12:51:53 +0200
 
-ezdm (0.0.6master1) quantal; urgency=low
+ezdm (0.0.6ubuntu1) quantal; urgency=low
 
   * master - Desktop menus finally working
 
