--- a/README
+++ b/README
@@ -31,6 +31,7 @@ test_json - A developer focussed mini-tool just used to rapidly verify the valid
 quick-combat - A tool to manage combat scenarios
 editcs - A character sheet editor
 manualheal - An easy tool for healing characters who have been wounded
+tryability - Automatically attempt to roll a character ability
 
 Quick-combat is the crown jewel of the EZDM kit. QuickCombat will let you load up any number of characters
 from your existing sheets, and will then guide the process of combat among them under your control.
