--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ezdm (0.0.7ubuntu3) quantal; urgency=low
+
+  * master Ensure manualheal gets installed
+
+ -- A.J. Venter <ajventer@gmail.com>  Mon, 18 Mar 2013 23:05:42 +0200
+
 ezdm (0.0.7ubuntu2) quantal; urgency=low
 
   * master Inventory system working, now to write the tools to use it
