--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ezdm (0.0.8) quantal; urgency=low
+
+  * master Fully function item management
+
+ -- A.J. Venter <ajventer@gmail.com>  Tue, 19 Mar 2013 22:20:44 +0200
+
 ezdm (0.0.7ubuntu3) quantal; urgency=low
 
   * master Ensure manualheal gets installed
