--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ezdm (0.1.0) quantal; urgency=low
+
+  * web Install websymlinks automagically - at least in debian
+
+ -- A.J. Venter <ajventer@gmail.com>  Wed, 20 Mar 2013 22:16:08 +0200
+
 ezdm (0.0.8ubuntu3) quantal; urgency=low
 
   * master Fixed upward money convertor
