Starting to clean up and correct packaging for new design

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,198 +1,5 @@
-ezdm (0.1.0ubuntu4) quantal; urgency=low
+ezdm (2.0-pre-1) unstable; urgency=low
 
-  * master Sample data added
+  * source package automatically created by stdeb 0.6.0+git
 
- -- A.J. Venter <ajventer@gmail.com>  Sun, 24 Mar 2013 19:14:17 +0200
-
-ezdm (0.1.0ubuntu3) quantal; urgency=low
-
-  * master Improved menus
-  * master Greatly improved server process management
-
- -- A.J. Venter <ajventer@gmail.com>  Sun, 24 Mar 2013 13:38:21 +0200
-
-ezdm (0.1.0ubuntu2) quantal; urgency=low
-
-  * master System-sample-data support
-
- -- A.J. Venter <ajventer@gmail.com>  Sun, 24 Mar 2013 12:21:22 +0200
-
-ezdm (0.1.0ubuntu1) quantal; urgency=low
-
-  * web Pure web interface
-
- -- A.J. Venter <ajventer@gmail.com>  Sat, 23 Mar 2013 14:19:20 +0200
-
-ezdm (0.1.0) quantal; urgency=low
-
-  * web Install websymlinks automagically - at least in debian
-
- -- A.J. Venter <ajventer@gmail.com>  Wed, 20 Mar 2013 22:16:08 +0200
-
-ezdm (0.0.8ubuntu3) quantal; urgency=low
-
-  * master Fixed upward money convertor
-
- -- A.J. Venter <ajventer@gmail.com>  Wed, 20 Mar 2013 20:21:20 +0200
-
-ezdm (0.0.8ubuntu2) quantal; urgency=low
-
-  * master Fixed money exchange rate
-  * master Added proper money support
-
- -- A.J. Venter <ajventer@gmail.com>  Wed, 20 Mar 2013 19:21:38 +0200
-
-ezdm (0.0.8ubuntu1) quantal; urgency=low
-
-  * master More accurate rules
-
- -- A.J. Venter <ajventer@gmail.com>  Wed, 20 Mar 2013 00:48:01 +0200
-
-ezdm (0.0.8) quantal; urgency=low
-
-  * master Fully function item management
-
- -- A.J. Venter <ajventer@gmail.com>  Tue, 19 Mar 2013 22:20:44 +0200
-
-ezdm (0.0.7ubuntu3) quantal; urgency=low
-
-  * master Ensure manualheal gets installed
-
- -- A.J. Venter <ajventer@gmail.com>  Mon, 18 Mar 2013 23:05:42 +0200
-
-ezdm (0.0.7ubuntu2) quantal; urgency=low
-
-  * master Inventory system working, now to write the tools to use it
-
- -- A.J. Venter <ajventer@gmail.com>  Mon, 18 Mar 2013 22:49:24 +0200
-
-ezdm (0.0.7ubuntu1) quantal; urgency=low
-
-  * master Added inventory to template
-  * master Delete old weapons entries to make room for new inventory
-    system
-
- -- A.J. Venter <ajventer@gmail.com>  Mon, 18 Mar 2013 06:24:07 +0200
-
-ezdm (0.0.7) quantal; urgency=low
-
-  * master Character sheet editor
-
- -- A.J. Venter <ajventer@gmail.com>  Sun, 17 Mar 2013 19:19:32 +0200
-
-ezdm (0.0.6ubuntu5) quantal; urgency=low
-
-  * master Conditional template entries
-
- -- A.J. Venter <ajventer@gmail.com>  Sun, 17 Mar 2013 13:27:35 +0200
-
-ezdm (0.0.6ubuntu4) quantal; urgency=low
-
-  * master Syntax error fixed
-
- -- A.J. Venter <ajventer@gmail.com>  Sun, 17 Mar 2013 12:45:19 +0200
-
-ezdm (0.0.6ubuntu3) quantal; urgency=low
-
-  * master Ability charts coming along
-
- -- A.J. Venter <ajventer@gmail.com>  Sun, 10 Mar 2013 15:24:00 +0200
-
-ezdm (0.0.6ubuntu2) quantal; urgency=low
-
-  * stable Undo
-
- -- A.J. Venter <ajventer@gmail.com>  Sat, 02 Mar 2013 13:05:57 +0200
-
-ezdm (0.0.6ubuntu1) quantal; urgency=low
-
-  * master - Desktop menus finally working
-
- -- A.J. Venter <ajventer@gmail.com>  Sat, 02 Mar 2013 12:05:13 +0200
-
-ezdm (0.0.6) quantal; urgency=low
-
-  * master - Code-checking
-
- -- A.J. Venter <ajventer@gmail.com>  Sat, 02 Mar 2013 11:47:30 +0200
-
-ezdm (0.0.5ubuntu2) quantal; urgency=low
-
-  * master - Fixed tryexec path
-
- -- A.J. Venter <ajventer@gmail.com>  Fri, 01 Mar 2013 01:15:23 +0200
-
-ezdm (0.0.5ubuntu1) quantal; urgency=low
-
-  * master - Improved desktop file handling
-
- -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 23:43:21 +0200
-
-ezdm (0.0.5) quantal; urgency=low
-
-  * Non-maintainer upload.
-  * master - Added desktop icon
-
- -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 21:54:41 +0200
-
-ezdm (0.0.4ubuntu1+nmu1) UNRELEASED; urgency=low
-
-  * Non-maintainer upload.
-  * 0.0.5
-
- -- A.J. Venter <silentcoder@ravenriley>  Thu, 28 Feb 2013 21:53:39 +0200
-
-ezdm (0.0.4ubuntu1) quantal; urgency=low
-
-  * master - Added debhelper tokens
-
- -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 14:48:33 +0200
-
-ezdm (0.0.4) quantal; urgency=low
-
-  * master - 0.0.4 Ensure pyc files are created in postinst
-
- -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 14:41:56 +0200
-
-ezdm (0.0.3) quantal; urgency=low
-
-  * master - Proper package layout
-  * master - Lintian is now happy
-
- -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 12:29:54 +0200
-
-ezdm (0.0.2ubuntu1) quantal; urgency=low
-
-  * master - Sudo only for the bits that need it
-
- -- A.J. Venter <ajventer@gmail.com>  Wed, 27 Feb 2013 10:37:38 +0200
-
-ezdm (0.0.2) quantal; urgency=low
-
-  * master - stable build
-
- -- A.J. Venter <ajventer@gmail.com>  Tue, 26 Feb 2013 23:56:16 +0200
-
-ezdm (0.0.1ubuntu3) quantal; urgency=low
-
-  * Trying to get the format right
-
- -- A.J. Venter <ajventer@gmail.com>  Tue, 26 Feb 2013 23:31:43 +0200
-
-ezdm (0.0.1ubuntu2) quantal; urgency=low
-
-  * Fixed debian control file
-
- -- A.J. Venter <ajventer@gmail.com>  Tue, 26 Feb 2013 23:28:16 +0200
-
-ezdm (0.0.1ubuntu1) quantal; urgency=low
-
-  * Several bugfixes
-
- -- A.J. Venter <ajventer@gmail.com>  Tue, 26 Feb 2013 23:16:21 +0200
-
-ezdm (0.0.1) quantal; urgency=low
-
-  * Initial release. ()
-
- -- A.J. Venter <ajventer@gmail.com>  Tue, 26 Feb 2013 10:44:53 +0200
+ -- A.J. Venter <ajventer@gmail.com>  Thu, 24 Jul 2014 15:37:56 +0200
